--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
-        "livewire/livewire": "2.12.8"
+        "livewire/livewire": "2.12.8",
+        "maatwebsite/excel": "^3.1"
     },
     "require-dev": {
         "doctrine/dbal": "^3.6",
